--- a/Automark/Automark/WatermarkViewController.xib
+++ b/Automark/Automark/WatermarkViewController.xib
@@ -94,6 +94,13 @@
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyV-Kl-E1s">
                             <rect key="frame" x="8" y="84" width="359" height="181"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Y7-yZ-eJP">
+                                    <rect key="frame" x="-12" y="0.0" width="392" height="85"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" red="1" green="0.81960784310000001" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </view>
+                            </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
                     </subviews>
